responsive part of the page

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -523,6 +523,7 @@ video {
     padding-top: 5%;
     padding-bottom: 5%;
     margin-top: 3%;
+    margin-top: 8vh;
     // height: 500px;
 
     .banner-inner {
