--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1280,7 +1280,7 @@ video {
 
         .testimony {
             display: grid;
-            grid-template-columns: auto auto auto;
+            grid-template-columns: 33.3% 33.3% 33.3%;
             margin-top: 2%;
 
             .bless {
