--- a/src/css/style.css
+++ b/src/css/style.css
@@ -796,6 +796,10 @@ video {
   color: #91D738;
 }
 
+.features .features-inner .cont1 {
+  display: none;
+}
+
 @media screen and (max-width: 1024px) {
   .features .features-inner h1 {
     font-size: 1.5rem;
@@ -833,6 +837,124 @@ video {
   }
   .features .features-inner .cont .feature1 .green {
     color: #91D738;
+  }
+  .features .features-inner .cont {
+    display: none;
+  }
+  .features .features-inner .cont1 {
+    display: block;
+    width: 100%;
+    margin-top: 5%;
+  }
+  .features .features-inner .cont1 .carousel .slide1 .head {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    background: #F2FAFA;
+    padding: 5%;
+  }
+  .features .features-inner .cont1 .carousel .slide1 .head h3 {
+    font-size: 1rem;
+    text-align: center;
+    margin-top: 0;
+    line-height: 1;
+  }
+  .features .features-inner .cont1 .carousel .slide1 .head .Features {
+    width: 60%;
+    text-align: left;
+  }
+  .features .features-inner .cont1 .carousel .slide1 .head .FixBot {
+    width: 40%;
+    text-align: center;
+  }
+  .features .features-inner .cont1 .carousel .slide1 .head .Other {
+    display: none;
+  }
+  .features .features-inner .cont1 .carousel .slide1 .body {
+    background: #fff;
+  }
+  .features .features-inner .cont1 .carousel .slide1 .body div {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding: 5%;
+    border: 1px solid #D4D4D4;
+  }
+  .features .features-inner .cont1 .carousel .slide1 .body div .left {
+    width: 60%;
+    text-align: left;
+  }
+  .features .features-inner .cont1 .carousel .slide1 .body div .green {
+    width: 40%;
+    text-align: center;
+  }
+  .features .features-inner .cont1 .carousel .slide2 .head {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    background: #F2FAFA;
+    padding: 5%;
+  }
+  .features .features-inner .cont1 .carousel .slide2 .head h3 {
+    font-size: 1rem;
+    text-align: center;
+    margin-top: 0;
+    line-height: 1;
+  }
+  .features .features-inner .cont1 .carousel .slide2 .head .Features {
+    width: 60%;
+    text-align: left;
+  }
+  .features .features-inner .cont1 .carousel .slide2 .head .Other {
+    width: 40%;
+    text-align: center;
+  }
+  .features .features-inner .cont1 .carousel .slide2 .head .FixBot {
+    display: none;
+  }
+  .features .features-inner .cont1 .carousel .slide2 .body {
+    background: #fff;
+  }
+  .features .features-inner .cont1 .carousel .slide2 .body div {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding: 5%;
+    border: 1px solid #D4D4D4;
+  }
+  .features .features-inner .cont1 .carousel .slide2 .body div .left {
+    width: 60%;
+    text-align: left;
+  }
+  .features .features-inner .cont1 .carousel .slide2 .body div .green {
+    width: 40%;
+    text-align: center;
   }
 }
 
@@ -891,6 +1013,10 @@ video {
   margin-bottom: 5%;
   -webkit-box-shadow: 10px 32px 50px rgba(51, 51, 51, 0.03);
           box-shadow: 10px 32px 50px rgba(51, 51, 51, 0.03);
+}
+
+.why-choose .why-choose-inner .reason-cont .resort .resort-inner .icon {
+  display: none;
 }
 
 .why-choose .why-choose-inner .reason-cont .resort .resort-inner .fin {
@@ -961,8 +1087,28 @@ video {
     height: 120px;
     padding: 5%;
   }
+  .why-choose .why-choose-inner .reason-cont .resort .resort-inner .icon {
+    display: block;
+    width: 15%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .why-choose .why-choose-inner .reason-cont .resort .resort-inner .icon .con {
+    font-size: 1.5rem;
+    color: #EB5757;
+  }
+  .why-choose .why-choose-inner .reason-cont .resort .resort-inner .fin {
+    width: 20%;
+  }
   .why-choose .why-choose-inner .reason-cont .resort .resort-inner .p2 {
-    width: 70%;
+    width: 65%;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -979,6 +1125,7 @@ video {
   }
   .why-choose .why-choose-inner .reason-cont .resort .resort-inner .p2 p {
     text-align: left;
+    margin-left: 5%;
   }
   .why-choose .why-choose-inner .reason-cont .resort .resort-inner .p2 .bold {
     font-weight: bold;
@@ -1050,6 +1197,10 @@ video {
 .products .inner h3, .products .inner p {
   text-align: center;
   margin-bottom: 2.5%;
+}
+
+.products .inner .product1 {
+  display: none;
 }
 
 .products .inner .product {
@@ -1288,62 +1439,199 @@ video {
 
 @media screen and (max-width: 768px) {
   .products .inner .product {
+    display: none;
+  }
+  .products .inner .product1 {
+    display: block;
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    border-radius: 16px;
+    margin-top: 5%;
+  }
+  .products .inner .product1 .Standard {
+    background: #213654;
+    border-radius: 16px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-  }
-  .products .inner .product .Standard {
-    width: 100%;
+    -webkit-box-shadow: 0px 8px 32px rgba(59, 59, 59, 0.04) !important;
+            box-shadow: 0px 8px 32px rgba(59, 59, 59, 0.04) !important;
+    width: 80%;
     padding: 5%;
-    margin-top: 5%;
-    margin-bottom: 5%;
+    border-radius: 16px;
+    margin-left: 50%;
+    margin-right: 50%;
+    -webkit-transform: translate(-50%);
+            transform: translate(-50%);
+    height: 400px;
   }
-  .products .inner .product .Standard .starred {
-    margin-bottom: 5%;
-    margin-top: 5%;
+  .products .inner .product1 .Standard .icon {
+    color: #F4BC4D;
   }
-  .products .inner .product .Standard .snip {
+  .products .inner .product1 .Standard .starred {
+    display: block;
+    margin-bottom: 0%;
+    margin-top: 0%;
+    font-size: 0.75rem;
+  }
+  .products .inner .product1 .Standard h1 {
+    font-size: 2rem;
+  }
+  .products .inner .product1 .Standard h3 {
+    font-size: 1.2rem;
+  }
+  .products .inner .product1 .Standard p {
+    font-size: 0.75rem;
+  }
+  .products .inner .product1 .Standard h1, .products .inner .product1 .Standard h3, .products .inner .product1 .Standard p {
+    color: #fff;
+  }
+  .products .inner .product1 .Standard .snip {
     display: block;
     width: 100%;
     margin-bottom: 5%;
     margin-top: 5%;
   }
-  .products .inner .product .Standard div {
+  .products .inner .product1 .Standard div {
     margin-bottom: 5%;
-    width: 100%;
-    padding: 5%;
+    width: 90%;
   }
-  .products .inner .product .Standard div p {
+  .products .inner .product1 .Standard div p {
     text-align: left;
     color: #fff;
     margin-bottom: 5%;
   }
-  .products .inner .product .Standard div p .con {
+  .products .inner .product1 .Standard div p .con {
     color: #fff;
   }
-  .products .inner .product .Standard a {
+  .products .inner .product1 .Standard a {
+    font-family: "Poppins", sans-serif;
+    font-weight: normal;
+    font-size: 1rem;
+    line-height: 30px;
+    text-align: center;
+    background: #fff;
+    color: #213654;
+    display: block;
+    width: 100%;
+    text-decoration: none;
     padding: 2%;
-    margin-top: 5%;
+    margin-top: 0%;
+    border-radius: 12px;
     margin-bottom: 5%;
   }
-  .products .inner .product .Basic, .products .inner .product .Enterprise {
-    width: 100%;
-    padding: 5%;
+  .products .inner .product1 .Standard a:hover {
+    border: 1px solid #fff;
+    background: none;
+    color: #fff;
   }
-  .products .inner .product .Basic div, .products .inner .product .Enterprise div {
-    width: 100%;
+  .products .inner .product1 .Basic, .products .inner .product1 .Enterprise {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-shadow: 0px 8px 32px rgba(59, 59, 59, 0.04) !important;
+            box-shadow: 0px 8px 32px rgba(59, 59, 59, 0.04) !important;
+    width: 80%;
     padding: 5%;
+    border-radius: 16px;
+    background: #fff;
+    margin-left: 50%;
+    margin-right: 50%;
+    -webkit-transform: translate(-50%);
+            transform: translate(-50%);
+    height: 400px;
   }
-  .products .inner .product .Basic div p, .products .inner .product .Enterprise div p {
+  .products .inner .product1 .Basic .starred, .products .inner .product1 .Enterprise .starred {
+    display: none;
+  }
+  .products .inner .product1 .Basic .icon, .products .inner .product1 .Enterprise .icon {
+    color: #F4BC4D;
+  }
+  .products .inner .product1 .Basic h1, .products .inner .product1 .Enterprise h1 {
+    font-size: 2rem;
+  }
+  .products .inner .product1 .Basic h3, .products .inner .product1 .Enterprise h3 {
+    font-size: 1.2rem;
+  }
+  .products .inner .product1 .Basic p, .products .inner .product1 .Enterprise p {
+    font-size: 0.75rem;
+  }
+  .products .inner .product1 .Basic h1, .products .inner .product1 .Basic h3, .products .inner .product1 .Basic p, .products .inner .product1 .Enterprise h1, .products .inner .product1 .Enterprise h3, .products .inner .product1 .Enterprise p {
+    text-align: center;
+    margin-bottom: 3%;
+  }
+  .products .inner .product1 .Basic .snip, .products .inner .product1 .Enterprise .snip {
+    display: block;
+    width: 100%;
+    margin-bottom: 5%;
+    margin-top: 5%;
+  }
+  .products .inner .product1 .Basic div, .products .inner .product1 .Enterprise div {
+    margin-bottom: 5%;
+    width: 90%;
+  }
+  .products .inner .product1 .Basic div p, .products .inner .product1 .Enterprise div p {
     text-align: left;
     color: #6E6E6E;
     margin-bottom: 3%;
   }
-  .products .inner .product .Basic a, .products .inner .product .Enterprise a {
+  .products .inner .product1 .Basic div p .con, .products .inner .product1 .Enterprise div p .con {
+    color: #213654;
+  }
+  .products .inner .product1 .Basic a, .products .inner .product1 .Enterprise a {
+    font-family: "Poppins", sans-serif;
+    font-weight: normal;
+    font-size: 1rem;
+    line-height: 30px;
+    text-align: center;
+    background: #213654;
+    color: #FFFFFF;
+    display: block;
+    width: 100%;
+    text-decoration: none;
     padding: 2%;
     margin-top: 5%;
+    border-radius: 12px;
     margin-bottom: 5%;
+  }
+  .products .inner .product1 .Basic a:hover, .products .inner .product1 .Enterprise a:hover {
+    border: 1px solid #213654;
+    background: none;
+    color: #213654;
+  }
+}
+
+@media screen and (max-width: 540px) {
+  .products .inner .product1 .Basic, .products .inner .product1 .Enterprise, .products .inner .product1 .Standard {
+    width: 100%;
   }
 }
 
