--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -705,6 +705,10 @@ video {
                 }
             }
         }
+
+        .cont1 {
+            display: none;
+        }
     }
 
    
@@ -770,6 +774,125 @@ video {
                     }
                 }
             }
+
+            .cont {
+                display: none;
+
+            }
+
+            .cont1 {
+                display: block;
+                width: 100%;
+                margin-top: 5%;
+                .carousel {
+
+                    .slide1 {
+                        .head {
+                            width: 100%;
+                            // display: grid;
+                            // grid-template-columns: 50% 50%;
+                            display: flex;
+                            justify-content: space-between;
+                            align-items: center;
+                            background: #F2FAFA;
+                            padding: 5%;
+                    
+                                h3 {
+                                    font-size: 1rem;
+                                    text-align: center;
+                                    margin-top: 0;
+                                    line-height: 1;
+                                } 
+
+                                .Features {
+                                    width: 60%;
+                                    text-align: left;
+                                }
+
+                                .FixBot {
+                                    width: 40%;
+                                    text-align: center;
+                                }
+
+                                .Other {
+                                    display: none;
+                                }
+                        }
+
+                        .body {
+                            background: #fff;
+                            div {
+                                display: flex;
+                                justify-content: space-between;
+                                align-items: center;
+                                padding: 5%;
+                                border: 1px solid #D4D4D4;
+                                .left {
+                                    width: 60%;
+                                    text-align: left;
+                                }
+
+                                .green {
+                                    width: 40%;
+                                    text-align: center;
+                                }
+                            }
+                        }
+                    }
+
+                    .slide2 {
+                        .head {
+                            width: 100%;
+                            display: flex;
+                            justify-content: space-between;
+                            align-items: center;
+                            background: #F2FAFA;
+                            padding: 5%;
+                    
+                                h3 {
+                                    font-size: 1rem;
+                                    text-align: center;
+                                    margin-top: 0;
+                                    line-height: 1;
+                                } 
+
+                                .Features {
+                                    width: 60%;
+                                    text-align: left;
+                                }
+
+                                .Other {
+                                    width: 40%;
+                                    text-align: center;
+                                }
+
+                                .FixBot {
+                                    display: none;
+                                }
+                        }
+
+                        .body {
+                            background: #fff;
+                            div {
+                                display: flex;
+                                justify-content: space-between;
+                                align-items: center;
+                                padding: 5%;
+                                border: 1px solid #D4D4D4;
+                                .left {
+                                    width: 60%;
+                                    text-align: left;
+                                }
+
+                                .green {
+                                    width: 40%;
+                                    text-align: center;
+                                }
+                            }
+                        }
+                    }
+                }
+            }
         }
     
        
@@ -798,7 +921,6 @@ video {
                 background: #FFFFFF;
                 
                
-               
 
                 .resort-inner {
                     display: flex;
@@ -809,6 +931,10 @@ video {
                     border-radius: 10px;
                      margin-bottom: 5%;
                      box-shadow: 10px 32px 50px rgba(51, 51, 51, 0.03);
+
+                     .icon {
+                         display: none;
+                     }
                     
                     .fin {
                         width: 20%;
@@ -884,15 +1010,33 @@ video {
                     .resort-inner {
                         height: 120px;
                         padding: 5%;
+
+                        .icon {
+                            display: block;
+                            width: 15%;
+                            display: flex;
+                            justify-content: center;
+                            align-items: center;
+
+                            .con {
+                                font-size: 1.5rem;
+                                color: #EB5757;
+                            }
+                        }
+
+                        .fin {
+                            width: 20%;
+                        }
     
                         .p2 {
-                            width: 70%;
+                            width: 65%;
                             display: flex;
                             justify-content: center;
                             align-items: flex-start;
                             flex-direction: column;
                             p {
                                 text-align: left;
+                                margin-left: 5%;
                             }
     
                             .bold {
@@ -960,6 +1104,10 @@ video {
         h3, p {
             text-align: center;
             margin-bottom: 2.5%;
+        }
+
+        .product1 {
+            display: none;
         }
 
         .product {
@@ -1194,17 +1342,56 @@ video {
     
         .inner {
             .product {
-                flex-direction: column;
+                display: none;
+            }
+
+            .product1 {
+                display: block;
+                width: 100%;
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+                border-radius: 16px;
+                margin-top: 5%;
     
                 .Standard{
-                    width: 100%;
+                    background: #213654;
+                    border-radius: 16px;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    flex-direction: column;
+                    box-shadow: 0px 8px 32px rgba(59, 59, 59, 0.04) !important;
+                    width: 80%;
                     padding: 5%;
-                    margin-top: 5%;
-                    margin-bottom: 5%;
-                    
+                    border-radius: 16px;
+                    margin-left: 50%;
+                    margin-right: 50%;
+                    transform: translate(-50%);
+                    height: 400px;
+                    .icon {
+                        color: #F4BC4D;
+                    }
+    
                     .starred {
-                        margin-bottom: 5%;
-                        margin-top: 5%;
+                        display: block;
+                        margin-bottom: 0%;
+                        margin-top: 0%;
+                        font-size: 0.75rem;
+                    }
+    
+                    h1 {
+                        font-size: 2rem;
+                    }
+                    h3 {
+                        font-size: 1.2rem;
+                    }
+                    p {
+                        font-size: 0.75rem;
+                    }
+    
+                    h1, h3 , p {
+                        color:  #fff;
                     }
     
                     .snip {
@@ -1216,8 +1403,7 @@ video {
     
                     div {
                         margin-bottom: 5%;
-                        width: 100%;
-                        padding: 5%;
+                        width: 90%;
                         p {
                             text-align: left;
                             color: #fff;
@@ -1230,33 +1416,124 @@ video {
                     }
     
                     a {
-                      
+                        font-family: "Poppins", sans-serif  ;
+                        font-weight: normal;
+                        font-size: 1rem;
+                        line-height: 30px;
+                        text-align: center;
+                        background: #fff;
+                        color: #213654;
+                        display: block;
+                        width: 100%;
+                        text-decoration: none;
                         padding: 2%;
-                        margin-top: 5%;
+                        margin-top: 0%;
+                        border-radius: 12px;
                         margin-bottom: 5%;
+                        &:hover {
+                            border: 1px solid #fff;
+                            background: none;
+                            color: #fff;
+                        }
                     }
     
                 }
     
                 .Basic, .Enterprise {
-                    width: 100%;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    flex-direction: column;
+                    box-shadow: 0px 8px 32px rgba(59, 59, 59, 0.04) !important;
+                    width: 80%;
                     padding: 5%;
+                    border-radius: 16px;
+                    background: #fff;
+                    margin-left: 50%;
+                    margin-right: 50%;
+                    transform: translate(-50%);
+                    height: 400px;
+    
+                    .starred {
+                        display: none;
+                    }
+                    .icon {
+                        color: #F4BC4D;
+                    }
+                    h1 {
+                        font-size: 2rem;
+                    }
+                    h3 {
+                        font-size: 1.2rem;
+                    }
+                    p {
+                        font-size: 0.75rem;
+                    }
+    
+                    h1, h3, p {
+                        text-align: center;
+                        margin-bottom: 3%;
+                    }
+    
+                    .snip {
+                        display: block;
+                        width: 100%;
+                        margin-bottom: 5%;
+                        margin-top: 5%;
+                    }
     
                     div {
-                        width: 100%;
-                        padding: 5%;
+                        margin-bottom: 5%;
+                        width: 90%;
                         p {
                             text-align: left;
                             color: #6E6E6E;
                             margin-bottom: 3%;
+                            .con {
+                                color: #213654;
+                            }
                         }
                     }
     
                     a {
+                        font-family: "Poppins", sans-serif  ;
+                        font-weight: normal;
+                        font-size: 1rem;
+                        line-height: 30px;
+                        text-align: center;
+                        background: #213654;
+                        color: #FFFFFF;
+                        display: block;
+                        width: 100%;
+                        text-decoration: none;
                         padding: 2%;
                         margin-top: 5%;
+                        border-radius: 12px;
                         margin-bottom: 5%;
+                        &:hover {
+                            border: 1px solid #213654;
+                            background: none;
+                            color: #213654;
+                        }
                     }
+                }
+            }
+        }
+    }
+}
+
+@media screen and (max-width:540px) {
+    .products {
+        .inner {
+            .product1 {
+                .Basic, .Enterprise, .Standard {
+                    width: 100%;
+                    // height: 450px;
+
+                    // a {
+                    //     margin-top: 0%;
+                    //     margin-bottom: 0%;
+                    // }
                 }
             }
         }
